--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 h1{
-	background-color: yellow;
-	color: blue;
+	background-color: green;
+	color: orange;
 	font-family: 'courier New', Courier, monospace;
 }
  
